--- a/BosTinderPRO/.classpath
+++ b/BosTinderPRO/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="lib" path="C:/Users/FELIPE SEGURA/git/BosTinder/BosTinderPRO/librerias/commons-lang3-3.12.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Santiago Flórez/git/BosTinder/BosTinderPRO/librerias/opencsv-5.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Santiago Flórez/git/BosTinder/BosTinderPRO/librerias/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MARIAEUGENIA/git/BosTinder/BosTinderPRO/librerias/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MARIAEUGENIA/git/BosTinder/BosTinderPRO/librerias/opencsv-5.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
