--- a/BosTinderPRO/.classpath
+++ b/BosTinderPRO/.classpath
@@ -11,5 +11,8 @@
 	<classpathentry kind="lib" path="C:/Users/PROgrammers/javamail-1.4.7/mail.jar"/>
 	<classpathentry kind="lib" path="C:/Users/PROgrammers/commons-lang3-3.12.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/PROgrammers/jaf-1.1.1/activation.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PROgrammers/jfreechart-1.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PROgrammers/jcommon-1.0.8/jcommon-1.0.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PROgrammers/orsonpdf-1.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
